...

  @override
  Widget build(BuildContext context) {
    return ChangeNotifierProvider(
      create: (context) => RestaurantReviewProvider(context.read<ApiService>()),
      child: Scaffold(
        appBar: AppBar(title: const Text('Detail Restaurant')),
        body: Consumer2<RestaurantDetailProvider, RestaurantReviewProvider>(
          builder: (context, detailProvider, reviewProvider, child) {
            if (detailProvider.resultState is RestaurantDetailLoadingState ||
                reviewProvider.resultState is RestaurantReviewLoadingState) {
              return const Center(child: CircularProgressIndicator());
            }
...
