...
    }
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Center(child: Text('GastroGo'))),
      body: Column(
        children: [
          Container(
            padding: const EdgeInsets.symmetric(horizontal: AppPadding.p4),
            margin: const EdgeInsets.symmetric(vertical: AppMargin.m8),
            child: TextField(
...
